# ADLM-Research

./: .gitignore  CITATION.cff  README.md  adlm_diffusion.py  adlm_main.py  dataloader.py  diffusion.py  main.py  pyproject.toml  requirements.yml
configs/: config.yaml  config_adlm.yaml
configs/data/: ag_news.yaml  lambada.yaml  lm1b-gpt2.yaml  lm1b-streaming.yaml  lm1b.yaml  openwebtext-split.yaml  openwebtext-streaming.yaml  openwebtext.yaml  ptb.yaml  scientific_papers_arxiv.yaml  scientific_papers_pubmed.yaml  text8-crop.yaml  text8.yaml  wikitext103.yaml  wikitext2.yaml
exp/: tf-idf.py
exp_一時用/: check_vocabulary.py  load_datasets.py  test.py  tf-idf.py  verify_tfidf_calculation.py  word_importance.py
models/: __init__.py  denoiser.py  dimamba.py
notebooks/: adlm_inference.ipynb
scripts/: adlm.sh  adlm_2gpu.sh  adlm_eval.sh  adlm_zero_shot_eval.sh  ar.sh  dfm.sh  fb.sh  mdlm.sh  remdm-cap.sh  remdm-conf.sh  remdm-loop.sh  remdm-rescale.sh  sedd.sh
